fixed small overflow-x of output preview

--- a/src/plugins/kibana/public/settings/sections/add_data/styles/_add_data.less
+++ b/src/plugins/kibana/public/settings/sections/add_data/styles/_add_data.less
@@ -173,6 +173,7 @@ kbn-settings-add-data {
       .visual {
         background-color: #ecf0f1;
         border: 1px solid #ccc;
+        overflow-x: auto;
       }
 
       .visual.collapsed {
